Thu Jan  7 14:32:34 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (display): The start template, if provided,
	should come out after the header, not before.
	
Thu Jan  7 11:09:08 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/*.png: Add PNG versions of the default GIF graphics.

Wed Jan  6 22:03:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Synonym.cc, htfuzzy/htfuzzy.cc, htmerge/docs.cc,
	htmerge/words.cc, htdig/SGMLEntities.cc: Fix minor memory leaks.

	* htcommon/defaults.cc: Add .bin, .tgz, .rpm, .mov, .mpg, .avi to
	bad_extensions.

	* htdoc/attrs.html: Update documentation on default.

	* installdir/rundig: Removed check for age of synonym and endings
	DB. Nice feature, but it broke under too many shells.

	* htlib/DB2_db.cc: Change allocation of database cursors to match
	API in new version.

	* htdig/Retriever.cc(got_word): Skip changing to lowercase, we do
	it in WordList::Word.
	
Wed Jan  6 14:49:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Added four new attributes, fixed defaults & typos.

	* htdoc/cf_byname.html: Added four new attributes.

	* htdoc/cf_byprog.html: Added four new attributes.

Wed Jan  6 14:37:06 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Changed to require Autoconf 2.13 to eliminate bugs
	obeserved by users with older autoconf versions.

	* configure: Regenerated using Autoconf 2.13.

Wed Jan  6 13:08:26 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.cc: Applied fix from Dave Alden
	<alden@math.ohio-state.edu> to compile under SunPRO compilers
	by eliminating trailing comma in enum.

Wed Jan  6 17:50:55 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* {.,htcommon,htdig,htfuzzy,htlib,htmerge,htnotify,htsearch}/
	Makefile.in, Makefile.config.in: fixed relative path problem if
	install-sh is used.
