@@ -1,5 +1,4 @@
-<hr noshade>
-Pages:<br>
+$(PAGEHEADER)
 $(PREVPAGE) $(PAGELIST) $(NEXTPAGE)
 <hr noshade size=4>
 <a href="http://www.htdig.org">
